--- a/app/components/sheet-creation/defenses-tab.html
+++ b/app/components/sheet-creation/defenses-tab.html
@@ -1,4 +1,7 @@
-<!--link href="../assets/bower_components/polymer/polymer.html" rel="import"-->
+<link rel="import" href="../../../assets/bower_components/paper-fab/paper-fab.html">
+<link rel="import" href="../../../assets/bower_components/iron-icons/iron-icons.html">
+
+<link rel="import" href="defenses-card.html">
 
 <dom-module id="defenses-tab">
     <template>
