--- a/app/components/sheet-creation/status-card.html
+++ b/app/components/sheet-creation/status-card.html
@@ -1,4 +1,6 @@
-<!--link href="../../../assets/bower_components/polymer/polymer.html" rel="import"-->
+<link rel="import" href="../../../assets/bower_components/paper-card/paper-card.html">
+<link rel="import" href="../../../assets/bower_components/paper-input/paper-input-container.html">
+<link rel="import" href="../../../assets/bower_components/paper-button/paper-button.html">
 
 <dom-module id="status-card">
     <template>
@@ -46,7 +48,7 @@
             </div>
             <div class="card-actions">
                 <paper-button class="card-actions-button"
-                              on-click="deleteCard">Delete</paper-button>
+                              on-click="_deleteCard">Delete</paper-button>
             </div>
         </paper-card>
     </template>
@@ -90,12 +92,14 @@
                 reflectToAttribute: true
             }
         },
+
         ready: function(e){
             console.log("Status Card Loaded");
         },
-        deleteCard: function(e){
+
+        _deleteCard: function(e){
             console.log("Status Card Deleted");
-            document.querySelector("sheet-creation").splice('creatingSheet.statusList', this.index, 1);
+            document.querySelector("sheet-creation").splice('newSheet.statusList', this.index, 1);
         }
     });
 </script>
