--- a/app/components/sheet-creation/status-tab.html
+++ b/app/components/sheet-creation/status-tab.html
@@ -1,4 +1,7 @@
-<!--link href="../assets/bower_components/polymer/polymer.html" rel="import"-->
+<link rel="import" href="../../../assets/bower_components/paper-fab/paper-fab.html">
+<link rel="import" href="../../../assets/bower_components/iron-icons/iron-icons.html">
+
+<link rel="import" href="status-card.html">
 
 <dom-module id="status-tab">
     <template>
@@ -37,28 +40,19 @@
         <paper-fab noink
                    icon="add"
                    id="add-status"
-                   on-click="newStatus"></paper-fab>
+                   on-click="_newStatus"></paper-fab>
     </template>
 </dom-module>
 
 <script>
     Polymer({
         is: "status-tab",
-        properties: {
-            statusList: {
-                type: Array,
-                notify: true,
-                reflectToAttribute: true
-            }
-        },
+
         ready: function(e){
             console.log("Status Tab Loaded");
         },
-        cardSwipedAway: function(e){
-            console.log("Status Card Removed");
-            this.splice('statusList', e.detail.target.index, 1);
-        },
-        newStatus: function(e){
+
+        _newStatus: function(e){
             console.log("Status Card Add");
             this.push("statusList", {
                 name: "Str/Dex/Int/...",
