--- a/app/components/sheet-detail/detail-status-card.html
+++ b/app/components/sheet-detail/detail-status-card.html
@@ -1,4 +1,4 @@
-<!--link href="../assets/bower_components/polymer/polymer.html" rel="import"-->
+<link rel="import" href="../../../assets/bower_components/paper-card/paper-card.html">
 
 <dom-module id="detail-status-card">
     <template>
@@ -38,11 +38,7 @@
 <script>
     Polymer({
         is: "detail-status-card",
-        properties: {
-            statusList: {
-                type: Object
-            }
-        },
+        
         ready: function(e){
             console.log("Status List Card Loaded");
         }
