--- a/app/components/sheet-edit/sheet-edit.html
+++ b/app/components/sheet-edit/sheet-edit.html
@@ -1,4 +1,7 @@
-<!--link href="../../../assets/bower_components/polymer/polymer.html" rel="import"-->
+<link rel="import" href="../../../assets/bower_components/paper-tabs/paper-tabs.html">
+<link rel="import" href="../../../assets/bower_components/iron-pages/iron-pages.html">
+<link rel="import" href="../../../assets/bower_components/paper-fab/paper-fab.html">
+<link rel="import" href="../../../assets/bower_components/iron-icons/iron-icons.html">
 
 <dom-module id="sheet-edit">
     <template>
@@ -27,36 +30,23 @@
                 position: absolute;
                 right: 16px;
                 top: 120px;
+                z-index: 1;
             }
 
-            .tabs-pages {
+            iron-pages {
                 height: calc(100vh - 120px);
                 overflow-y: auto;
             }
 
-            @media (min-width: 370px) and (max-width: 600px) {
-                #save-sheet {
-                    top: 80px;
-                }
-            }
-
-            @media (min-width: 630px) {
-                #save-sheet {
+            @media (min-width: 490px) {
+                paper-fab {
                     top: 80px;
                 }
             }
         </style>
 
-        <app-location use-hash-as-path
-                      route="{{ route }}"></app-location>
-
-        <app-route route="{{ route }}"
-                   pattern="/:page"
-                   data="{{ dataRoute }}"></app-route>
-
         <paper-fab noink
                    icon="save"
-                   id="save-sheet"
                    on-click="saveSheet"></paper-fab>
 
         <paper-tabs noink
@@ -101,14 +91,6 @@
             tabSelected: {
                 type: String,
                 value: "0",
-                notify: true
-            },
-            route: {
-                type: Object,
-                notify: true
-            },
-            sheet: {
-                type: Object,
                 notify: true
             }
         },
@@ -185,7 +167,7 @@
             );
             console.log("Sheet Edition Saved");
             console.log("Route to SheetList");
-            this.set("route.path", "/SheetList");
+            document.querySelector("dungeon-dices").set("route.path", "/sheetList");
         }
     });
 </script>
