Finally Understanding RC2

--- a/app/components/content-pages.html
+++ b/app/components/content-pages.html
@@ -1,9 +1,9 @@
 <link rel="import" href="../../assets/bower_components/app-route/app-route.html">
 
 <link rel="import" href="sheet-list/sheet-list.html">
-<link rel="import" href="sheet-creation/sheet-creation.html" async >
-<link rel="import" href="sheet-detail/sheet-detail.html" async>
-<link rel="import" href="sheet-edit/sheet-edit.html" async>
+<link rel="import" href="sheet-creation/sheet-creation.html" >
+<link rel="import" href="sheet-detail/sheet-detail.html" >
+<link rel="import" href="sheet-edit/sheet-edit.html" >
 
 <dom-module id="content-pages">
     <template>
